<resources>
    <string name="app_name">Gikee</string>
    <string name="title_mine">个人</string>
    <string name="title_mineproject">项目</string>
    <string name="title_home">首页</string>
    <string name="title_address">监控账户</string>
    <string name="ap_title">全部项目</string>
    <string name="ap_zhnum">账户总数</string>
    <string name="ap_newzh">新增账户</string>
    <string name="ap_activezh">活跃账户</string>
    <string name="ap_transationnum">交易笔数</string>
    <string name="ap_transation">交易总量</string>
    <string name="ap_allzhnum">总账户数：</string>
    <string name="today_add_title">今日新增账户</string>
    <string name="today_add_headtx">截止区块：</string>
    <string name="today_add_nodata">没有数据</string>
    <string name="today_add_add">新增</string>
    <string name="today_active_date">日期</string>
    <string name="today_active_active">活跃</string>
    <string name="today_active_user">活跃账户</string>
    <string name="today_active_title">今日活跃账户</string>
    <string name="today_tran_title">今日交易笔数</string>
    <string name="today_tran_time">时间</string>
    <string name="today_tran_num">交易笔数</string>
    <string name="today_tran_des">笔数</string>
    <string name="zh_header_title">持币账户</string>
    <string name="zh_zh_des">账户</string>
    <string name="zh_header_minute">5分钟</string>
    <string name="zh_header_hour">小时</string>
    <string name="zh_header_day">日</string>
    <string name="zh_header_week">周</string>
    <string name="zh_header_month">月</string>
    <string name="zh_header_date">日期</string>
    <string name="zh_header_ownnum">持币地址数</string>
    <string name="zh_title">持币账户数</string>
    <string name="zh_time_interval">时段</string>
    <string name="zh_start">开始</string>
    <string name="zh_end">截止</string>
    <string name="zh_week">7天</string>
    <string name="zh_month">30天</string>
    <string name="zh_twomonth">60天</string>
    <string name="zh_halfyear">半年</string>
    <string name="zh_year">一年</string>
    <string name="zh_newadd_title">新增账户</string>
    <string name="zh_newadd_addnum">新增账户数</string>
    <string name="zh_transactionnum_title">链上交易数</string>
    <string name="zh_transactionnum_addnum">新增链上交易数</string>
    <string name="zh_transaction_title">链上交易量</string>
    <string name="zh_transaction_addnum">新增链上交易量</string>
    <string name="zh_active_title">活跃账户</string>
    <string name="zh_active_addnum">活跃账户数</string>
    <string name="zh_top_title">排名</string>
    <string name="zh_top_addr">排名</string>
    <string name="zh_top_num">账户</string>
    <string name="zh_top_bili">持币量</string>
    <string name="zh_top_change">持币占比</string>
    <string name="zh_zhfb_title">持币账户分布</string>
    <string name="zh_zhfb_fanwei">范围</string>
    <string name="zh_zhfb_cbnum">持币数量</string>
    <string name="zh_zhfb_cbpie">持币比例</string>
    <string name="zh_jybs_title">链上交易笔数分布</string>
    <string name="zh_jybs_guimo">规模</string>
    <string name="zh_jybs_num">交易笔数</string>
    <string name="zh_jyl_title">链上交易量分布</string>
    <string name="bili">占比</string>
    <string name="mp_title">我的项目</string>
    <string name="mp_footer">+添加、取消、排序我的项目 ></string>
    <string name="search_context">搜索BTC、ETH、EOS上的项目、账户、交易ID</string>
    <string name="search_special_context">请输入交易所、名人、事件</string>
    <string name="browse">近期热搜</string>
    <string name="mp_edit_title">编辑项目</string>
    <string name="ma_edit_title">编辑账户</string>
    <string name="ma_edit_pname">账户名称</string>
    <string name="mp_edit_pname">项目名称</string>
    <string name="mp_edit_coll">关注</string>
    <string name="mp_edit_top">置顶</string>
    <string name="mp_edit_sort">排序</string>
    <string name="mp_edit_add">+ 添加</string>
    <string name="mp_add_title">搜索</string>
    <string name="mp_add_hot">热门项目</string>
    <string name="mp_add_hestory">历史记录</string>
    <string name="mp_add_cancle">取消</string>
    <string name="mp_add_des1">这个%1$s藏的太深了，我们正在努力挖掘</string>
    <string name="mine_login">注册／登录</string>
    <string name="mine_password">修改密码</string>
    <string name="mine_warning">消息通知</string>
    <string name="mine_quate">红涨绿跌</string>
    <string name="mine_language">多语言</string>
    <string name="mine_telephone">联系我们</string>
    <string name="mine_share">推荐给朋友</string>
    <string name="mine_edition">当前版本</string>
    <string name="mine_contact_wechat">微信</string>
    <string name="wechat_public">微信公众号</string>
    <string name="twitter">Twitter</string>
    <string name="dianbao">电报群</string>
    <string name="mine_contact_weibo">微博</string>
    <string name="mine_contact_email">Email</string>
    <string name="wechat_friends">朋友圈</string>
    <string name="wechat_qq">QQ交流群</string>
    <string name="mine_contact_facebook">Facebook</string>
    <string name="login_login">登录</string>
    <string name="login_regist">注册</string>
    <string name="login_email">请输入邮箱地址</string>
    <string name="login_emailtitle">邮箱登录</string>
    <string name="login_password">请输入密码</string>
    <string name="confirm_password">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="regist_sure">完成</string>
    <string name="regist_findback">找回密码</string>
    <string name="regist_repeat_password">请重新输入密码</string>
    <string name="regist_des1">点击完成即表示同意</string>
    <string name="regist_des2">《服务协议及隐私政策》</string>
    <string name="dg_choseico_cancel">取消</string>
    <string name="dg_chose_unit_china_des">人民币</string>
    <string name="dg_chose_unit_china">人民币 CNY</string>
    <string name="dg_chose_unit_america_des">美元</string>
    <string name="dg_chose_unit_america">美元 USD</string>
    <string name="dg_chose_language_chana">简体中文</string>
    <string name="dg_chose_language_english">English</string>
    <string name="dg_uploadcomplete_sure">确认</string>
    <string name="dg_exit_sure">退出账户</string>
    <string name="recycler_nomore">更多链上数据，正在努力挖掘中...</string>
    <string name="pop_share">分享</string>
    <string name="toast_exitapp">再按一次退出程序</string>
    <string name="toast_emptyhistory">历史记录为空</string>
    <string name="toast_clearhistory_sure">清空成功</string>
    <string name="hot_project">热门项目</string>
    <string name="leaderboard">ERC20 排行榜</string>
    <string name="leader">排行</string>
    <string name="top50">TOP50排名</string>
    <string name="trade">交易量</string>
    <string name="value">市值</string>
    <string name="value_change">市值变化</string>
    <string name="turnover">24H成交额</string>
    <string name="usrjoin">用户参与度</string>
    <string name="trade_live">交易活跃度</string>
    <string name="leaderby">按交易Txhash数量排序</string>
    <string name="collect_project">暂无收藏项目</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="trade_lastweek">最近一周交易</string>
    <string name="trade_time">交易时间</string>
    <string name="trade_num">交易额</string>
    <string name="address">账户</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="update_name">修改备注</string>
    <string name="save">保存</string>
    <string name="edittrend">编辑自选 ></string>
    <string name="trend_name">趋势名称</string>
    <string name="trade_monitoring">特殊交易监控(近一个月)</string>
    <string name="more">查看全部</string>
    <string name="ranking">排名</string>
    <string name="volume">持币量</string>
    <string name="ratio">持币占比</string>
    <string name="newaddress">新增账户</string>
    <string name="sleepadress">休眠账户</string>
    <string name="awakeaddress">唤醒账户</string>
    <string name="range">范围</string>
    <string name="newversion">当前已经是最新版本</string>
    <string name="start_download">正在下载</string>
    <string name="checking">正在检查</string>
    <string name="Downloaded">下载</string>
    <string name="edit_choose">编辑自选</string>
    <string name="update_now">立即升级</string>
    <string name="update_after">稍后再说</string>
    <string name="cannel">取消</string>
    <string name="TOP00">头部账户资产分布</string>
    <string name="onweraddress">持币账户数</string>
    <string name="loadmore">上拉加载更多...</string>
    <string name="nomoredata">没有更多数据了</string>
    <string name="remind">提醒</string>
    <string name="detail">查看详情</string>
    <string name="message">提醒</string>
    <string name="more_addresscollect">多账户转账聚集</string>
    <string name="more_radiation">发散转账多账户</string>
    <string name="nocontext">暂无内容</string>
    <string name="share">分享</string>
    <string name="yestaday">昨日</string>
    <string name="lastweek">近一周</string>
    <string name="lastmonth">近一个月</string>
    <string name="top100trade">TOP100账户交易频次</string>
    <string name="Handfeetotl">手续费总消耗</string>
    <string name="Handfee">平均每笔手续费</string>
    <string name="diffc">难度</string>
    <string name="power">算力</string>
    <string name="jiaoyishouxufei">平均每笔手续费</string>
    <string name="jiaoyisliang">平均每笔交易量</string>
    <string name="size">规模</string>
    <string name="tradecount">交易笔数</string>
    <string name="trade_number">交易笔数</string>
    <string name="tradenum">交易量</string>
    <string name="HugeNum">超大额</string>
    <string name="BigNum">大额</string>
    <string name="liveaddressnum">活跃账户数</string>
    <string name="alladdress">总账户数</string>
    <string name="onweraddressnum">持币地址数</string>
    <string name="hugeCount">超大单</string>
    <string name="bigCount">大单</string>
    <string name="midiumCount">中单</string>
    <string name="smallCOunt">小单</string>
    <string name="tinyCount">超小单</string>
    <string name="top10">1-10</string>
    <string name="top50r">11-50</string>
    <string name="top100">51-100</string>
    <string name="top1000">101-1000</string>
    <string name="update_check">更新内容</string>
    <string name="update_info">1、修复已知BUG，提升性能和稳定性</string>
    <string name="checkout">检查更新</string>
    <string name="circulation">发行量</string>
    <string name="circulationrate">流通率</string>
    <string name="address_rank">账户区间</string>
    <string name="other_a">其他</string>
    <string name="today">今日</string>
    <string name="tokeninfo">当前数据均来自链上...</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_cannel">取消收藏</string>
    <string name="ci">次</string>
    <string name="NO1address">NO.1账户</string>
    <string name="login_registered">注册/登录</string>
    <string name="top100_distributed">头部账户资产分布</string>
    <string name="topDis">持币账户资产分布</string>
    <string name="specialTrade">特殊交易监控</string>
    <string name="specialtrade">特殊账户</string>
    <string name="bigTradeCountDis">大额转账</string>
    <string name="frequentlyTrade">交易频繁</string>
    <string name="newAndInactivity">新增与唤醒账户</string>
    <string name="newCount">新增账户</string>
    <string name="wakeCount">唤醒账户</string>
    <string name="inactiveCount">休眠账户</string>
    <string name="activeDis">活跃账户</string>
    <string name="trade_vol">交易笔数</string>
    <string name="marketValue">流通市值</string>
    <string name="diffPower">矿难度、算力</string>
    <string name="avgTrdVol">平均每笔交易量</string>
    <string name="topFreqAddr">账户交易频次排名</string>
    <string name="tradeVolDis">交易量分布</string>
    <string name="tradeCountDis">交易笔数分布</string>
    <string name="allAddr">总账户数</string>
    <string name="topPlayer">富豪榜</string>
    <string name="allGas">手续费总消耗</string>
    <string name="avgGas">平均每笔手续费</string>
    <string name="allAddr_zh">总账户数</string>
    <string name="ownAddr_title_zh">持币账户</string>
    <string name="top100_distributed_zh">头部账户资产分布</string>
    <string name="topDis_zh">持币账户资产分布</string>
    <string name="specialTrade_zh">特殊交易监控</string>
    <string name="newCount_zh">新增账户</string>
    <string name="wakeCount_zh">唤醒账户</string>
    <string name="inactiveCount_zh">休眠账户</string>
    <string name="activeDis_zh">活跃账户</string>
    <string name="trade_vol_zh">交易笔数</string>
    <string name="tradenum_zh">交易量</string>
    <string name="avgTrdVol_zh">平均每笔交易量</string>
    <string name="topFreqAddr_zh">账户交易频次排名</string>
    <string name="tradeVolDis_zh">交易量分布</string>
    <string name="tradeCountDis_zh">交易笔数分布</string>
    <string name="rank_amount">额度</string>
    <string name="follow_system">跟随系统</string>
</resources>