<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--<include layout="@layout/view_titlebar_text" />-->

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/gray_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_12"
            android:text="@string/mp_edit_pname" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_12"
            android:text="@string/collect" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_12"
            android:text="@string/mp_edit_top" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_12"
            android:text="@string/mp_edit_sort" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mp_editproject_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout"
        android:layout_marginLeft="@dimen/dp_12">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>