<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alpha_bg">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg">

        <Button
            android:id="@+id/dialog_chose_unit_system"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textAllCaps="false"
            android:visibility="gone"
            android:text="@string/follow_system"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_title" />

        <Button
            android:id="@+id/dialog_chose_unit_usd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_below="@+id/dialog_chose_unit_system"
            android:background="@color/white"
            android:text="@string/dg_chose_language_chana"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_title" />

        <Button
            android:id="@+id/dialog_chose_unit_cny"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_1"

            android:layout_below="@+id/dialog_chose_unit_usd"
            android:background="@color/white"
            android:text="@string/dg_chose_language_english"
            android:textAllCaps="false"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_title" />

        <Button
            android:id="@+id/dialog_chose_unit_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_1"

            android:layout_below="@+id/dialog_chose_unit_cny"
            android:background="@color/white"
            android:textAllCaps="false"
            android:text="@string/dg_choseico_cancel"
            android:textColor="@color/gray_c7"
            android:textSize="@dimen/sp_title" />








    </RelativeLayout>
</RelativeLayout>