<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/zhanghu_fenbu_linechart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/shuju_zhanghu_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/zhanghu_fenbu_piechart_legend"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shuju_zhanghu_minute"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_gray_white"
                android:gravity="center"
                android:text="@string/zh_header_minute"
                android:textColor="@color/gray_c7"
                android:textSize="@dimen/sp_content" />

            <TextView
                android:id="@+id/shuju_zhanghu_hour"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_gray_white_top_bttom"
                android:gravity="center"
                android:text="@string/zh_header_hour"
                android:textColor="@color/gray_c7"
                android:textSize="@dimen/sp_content" />

            <TextView
                android:id="@+id/shuju_zhanghu_day"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/appcolors"
                android:gravity="center"
                android:text="@string/zh_header_day"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_content" />

            <TextView
                android:id="@+id/shuju_zhanghu_week"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_gray_white_top_bttom"
                android:gravity="center"
                android:text="@string/zh_header_week"
                android:textColor="@color/gray_c7"
                android:textSize="@dimen/sp_content" />

            <TextView
                android:id="@+id/shuju_zhanghu_month"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_gray_white"
                android:gravity="center"
                android:text="@string/zh_header_month"
                android:textColor="@color/gray_c7"
                android:textSize="@dimen/sp_content" />
        </LinearLayout>


        <com.gikee.app.views.MyLineChart
            android:id="@+id/shuju_zhanghu_linechart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">
        </com.gikee.app.views.MyLineChart>

        <com.gikee.app.views.MyPieChart
            android:id="@+id/zhanghu_fenbu_piechart"
            android:layout_below="@+id/shuju_zhanghu_time"
            android:layout_width="match_parent"
            android:layout_height="250dp">

        </com.gikee.app.views.MyPieChart>

        <!--<ImageView-->
            <!--android:id="@+id/all_shuju_today_add_info"-->
            <!--android:layout_width="14dp"-->
            <!--android:layout_height="14dp"-->
            <!--android:layout_margin="@dimen/dp_5"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:src="@mipmap/instructions" />-->

        <com.gikee.app.views.IconView
            android:id="@+id/all_shuju_today_add_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:textColor="@color/gray_33"
            android:text="&#xe60b;"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/zhanghu_fenbu_piechart_legend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shuju_zhanghu_linechart"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="30dp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/zhanghu_fenbu_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/zhanghu_fenbu_linechart_layout"
        android:background="@color/gray_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zhanghu_fenbu_title1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/today_tran_time"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/zhanghu_fenbu_title2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/value"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/zhanghu_fenbu_title3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/value_change"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/zhanghu_fenbu_title4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/turnover"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/sp_msg" />
    </LinearLayout>

</RelativeLayout>