<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <ImageView
        android:id="@+id/rank_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@mipmap/rich_list"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/shuju_zhanghu_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_below="@+id/rank_list"
        android:background="@color/gray_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ranking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zh_top_title"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zh_zh_des"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/rank_amount"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/sp_msg" />

        <TextView
            android:id="@+id/proportion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/bili"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/sp_msg" />
    </LinearLayout>

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_below="@+id/shuju_zhanghu_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:overScrollMode="never" />


        <TextView
            android:id="@+id/nodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:text="@string/nocontext"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/gray_33"
            />
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

</RelativeLayout>