<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@mipmap/logo" />
    <LinearLayout
        android:id="@+id/version_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        >

        <TextView
            android:id="@+id/version_check"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/update_check"
            android:layout_below="@+id/login_logo"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/gray_33"
            android:layout_gravity="center_horizontal"
            android:textSize="13dp"
            />
        <TextView
            android:id="@+id/currect_verion"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/yestaday"
            android:visibility="gone"

            />
    </LinearLayout>


    <TextView
        android:id="@+id/version_info"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/version_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/update_info"
        android:textSize="12sp"
        />


    <RelativeLayout
        android:id="@+id/nocontent_repeat"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/version_info"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_white_appcolor_5">

        <TextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/checkout"
            android:textColor="@color/appcolors"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>



</RelativeLayout>